Early baseline model for travel time prediction
Both porto_taxi.ipynb and  porto_taxi_v2.ipynb notebooks contain the same pipeline. The difference is in parameters like dataset size, sequence lenght or number of stacked LSTM modules.

porto_taxi_visualization.ipynb contains example visualizations of trajectories using MovingPandas and outputs from GeoDataFrames

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,14 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# SRAI-related
+/srai-obsrai/
+**/files/
+**/lightning_logs/
+**/cache/
+
+# storing temporal data
+**/data/
+*.feather
+*.parquet
