--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,4 @@
-# Python 3.11.8
+# Python 3.11.9, 3.12.3
 
 # pip-tools must be installed:
 # python -m pip install pip-tools
@@ -6,18 +6,31 @@
 # to generate requirements.txt:
 # pip-compile requirements.in
 
+# srai fork
+# https://github.com/Repcak2000/srai.git
+# optional dependencies: osm, torch, datasets
+
 black[jupyter]
 contextily
 fastparquet
 folium
 geopandas
+geoviews
 glob2
+hvplot
 ipykernel
 ipywidgets
 mapclassify
 matplotlib
+movingpandas
 notebook
 numpy
 pandas
+pyogrio
 pyarrow
+python-dotenv
 tqdm
+
+--extra-index-url https://download.pytorch.org/whl/cu121
+torch
+torchvision
